[tool.poetry]
name = "api-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
aiomysql = "^0.2.0"
python-jose = "^3.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pylint = "^3.0.2"
isort = "^5.12.0"
pytest-asyncio = "^0.21.1"
aiosqlite = "^0.19.0"
httpx = "^0.25.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
